--- a/templates/account/edit_profile.html
+++ b/templates/account/edit_profile.html
@@ -45,7 +45,7 @@ License: For each use you must have a valid license purchased only from above li
 				<div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-lg-20">
 					<!--begin::Logo-->
 					<a href="/" class="mb-12">
-						<img alt="Logo" src="{% static 'assets/media/logos/logo-1.svg' %}" class="h-40px" />
+						<img alt="Logo" src="{% static 'media/logos/logo-1.svg' %}" class="h-40px" />
 					</a>
 					<!--end::Logo-->
 					<!--begin::Wrapper-->
