--- a/templates/dashboards/projects.html
+++ b/templates/dashboards/projects.html
@@ -9052,7 +9052,7 @@ License: For each use you must have a valid license purchased only from above li
 														<!--end::Items-->
 														<!--begin::Action-->
 														<div class="d-flex flex-column flex-sm-row d-grid gap-2">
-															<a href="#" class="btn btn-success flex-shrink-0 me-2" data-bs-toggle="modal" data-bs-target="#kt_modal_upgrade_plan">Upgrade Plan</a>
+															<a href="{% url 'monthly' %}" class="btn btn-success flex-shrink-0 me-2" >Upgrade Plan</a>
 															<a href="#" class="btn btn-primary flex-shrink-0" style="background: rgba(255, 255, 255, 0.2)" data-bs-toggle="modal" data-bs-target="#kt_modal_create_app">Read Guides</a>
 														</div>
 														<!--end::Action-->
@@ -11733,6 +11733,9 @@ License: For each use you must have a valid license purchased only from above li
 		<!--end::Scrolltop-->
 		<!--begin::Modals-->
 		<!--begin::Modal - Upgrade plan-->
+		
+			
+		
 		<div class="modal fade" id="kt_modal_upgrade_plan" tabindex="-1" aria-hidden="true">
 			<!--begin::Modal dialog-->
 			<div class="modal-dialog modal-xl">
@@ -12234,6 +12237,7 @@ License: For each use you must have a valid license purchased only from above li
 			<!--end::Modal dialog-->
 		</div>
 		<!--end::Modal - Upgrade plan-->
+	</form>
 		<!--begin::Modal - Invite Friends-->
 		<div class="modal fade" id="kt_modal_invite_friends" tabindex="-1" aria-hidden="true">
 			<!--begin::Modal dialog-->
