--- a/templates/index.html
+++ b/templates/index.html
@@ -2304,7 +2304,7 @@
 														</a>
 													</div>
 													<div class="menu-item">
-														<a class="menu-link py-3" href="../../demo1/dist/dashboards/projects.html">
+														<a class="menu-link py-3" href="{% url 'project_dashboard' %}">
 															<span class="menu-bullet">
 																<span class="bullet bullet-dot"></span>
 															</span>
