--- a/templates/index.html
+++ b/templates/index.html
@@ -474,7 +474,7 @@
 											</a>
 										</div>
 										<div class="menu-item">
-											<a class="menu-link" href="../../demo1/dist/account/billing.html">
+											<a class="menu-link" href="{% url 'billing' %} ">
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
@@ -2707,7 +2707,7 @@
 																</a>
 															</div>
 															<div class="menu-item">
-																<a class="menu-link py-3" href="../../demo1/dist/account/billing.html">
+																<a class="menu-link py-3" href="{% url 'billing' %} ">
 																	<span class="menu-bullet">
 																		<span class="bullet bullet-dot"></span>
 																	</span>
