--- a/templates/yearly_plan.html
+++ b/templates/yearly_plan.html
@@ -92,7 +92,7 @@
 											<!--begin::Info-->
 											<div class="flex-grow-1">
 												<h2 class="d-flex align-items-center fs-2 fw-bolder flex-wrap">{{plans.3.name}}</h2>
-												<div class="fw-bold opacity-50">Best for startups</div>
+												<div class="fw-bold opacity-50">{{plans.3.description}} </div>
 											</div>
 											<!--end::Info-->
 										</div>
@@ -127,7 +127,7 @@
 													<!--begin::Info-->
 													<div class="flex-grow-1">
 														<h2 class="d-flex align-items-center fs-2 fw-bolder flex-wrap">{{plans.4.name}}</h2>
-														<div class="fw-bold opacity-50">Best for startups</div>
+														<div class="fw-bold opacity-50">{{plans.4.description}}</div>
 													</div>
 													<!--end::Info-->
 												</div>
@@ -162,7 +162,7 @@
 															<!--begin::Info-->
 															<div class="flex-grow-1">
 																<h2 class="d-flex align-items-center fs-2 fw-bolder flex-wrap">{{plans.5.name}}</h2>
-																<div class="fw-bold opacity-50">Best for startups</div>
+																<div class="fw-bold opacity-50">{{plans.5.description}} </div>
 															</div>
 															<!--end::Info-->
 														</div>
