--- a/templates/monthly_plan.html
+++ b/templates/monthly_plan.html
@@ -162,7 +162,7 @@
 															<!--begin::Info-->
 															<div class="flex-grow-1">
 																<h2 class="d-flex align-items-center fs-2 fw-bolder flex-wrap">{{plans.2.name}}</h2>
-																<div class="fw-bold opacity-50">{{plans.2/description}} </div>
+																<div class="fw-bold opacity-50">{{plans.2.description}} </div>
 															</div>
 															<!--end::Info-->
 														</div>
