--- a/templates/account/billing.html
+++ b/templates/account/billing.html
@@ -6503,7 +6503,7 @@ License: For each use you must have a valid license purchased only from above li
 													<div class="d-flex flex-column">
 														<!--begin::Name-->
 														<div class="d-flex align-items-center mb-2">
-															<a href="#" class="text-gray-900 text-hover-primary fs-2 fw-bolder me-1">Max Smith</a>
+															<a href="#" class="text-gray-900 text-hover-primary fs-2 fw-bolder me-1">{{ user.username }}</a>
 															<a href="#">
 																<!--begin::Svg Icon | path: icons/duotune/general/gen026.svg-->
 																<span class="svg-icon svg-icon-1 svg-icon-primary">
@@ -6545,7 +6545,7 @@ License: For each use you must have a valid license purchased only from above li
 																	<path d="M21 5H2.99999C2.69999 5 2.49999 5.10005 2.29999 5.30005L11.2 13.3C11.7 13.7 12.4 13.7 12.8 13.3L21.7 5.30005C21.5 5.10005 21.3 5 21 5Z" fill="currentColor" />
 																</svg>
 															</span>
-															<!--end::Svg Icon-->max@kt.com</a>
+															<!--end::Svg Icon-->{{ user.email }}</a>
 														</div>
 														<!--end::Info-->
 													</div>
@@ -6824,14 +6824,20 @@ License: For each use you must have a valid license purchased only from above li
 											<!--begin::Col-->
 											<div class="col-lg-7">
 												<!--begin::Heading-->
-												<h3 class="mb-2">Active until Dec 09, 2022</h3>
-												<p class="fs-6 text-gray-600 fw-bold mb-6 mb-lg-15">We will send you a notification upon Subscription expiration</p>
+												{% if subscription %}
+  <h3 class="mb-2">Active until {{ subscription.end_date|date:"M d, Y" }}</h3>
+  <p class="fs-6 text-gray-600 fw-bold mb-6 mb-lg-15">We will send you a notification upon Subscription expiration</p>
+  <div class="fs-5 mb-2">
+	<span class="text-gray-800 fw-bolder me-1">$24.99</span>
+	<span class="text-gray-600 fw-bold">Per Month</span>
+</div>
+{% else %}
+<h3 class="mb-2">No Active Plans</h3>
+{% endif %}
+
 												<!--end::Heading-->
 												<!--begin::Info-->
-												<div class="fs-5 mb-2">
-													<span class="text-gray-800 fw-bolder me-1">$24.99</span>
-													<span class="text-gray-600 fw-bold">Per Month</span>
-												</div>
+												
 												<!--end::Info-->
 												<!--begin::Notice-->
 												<div class="fs-6 text-gray-600 fw-bold">Extended Pro Package. Up to 100 Agents &amp; 25 Projects</div>
@@ -6855,10 +6861,18 @@ License: For each use you must have a valid license purchased only from above li
 												<div class="fs-6 text-gray-600 fw-bold mb-10">14 Users remaining until your plan requires update</div>
 												<!--end::Description-->
 												<!--begin::Action-->
+												
+													<input type="hidden" name="subscription_id" value="{{ subscription.id }}">
+													
+												
+												<form method="post" action="{% url 'cancel_subscription' %}">
+													{% csrf_token %}
 												<div class="d-flex justify-content-end pb-0 px-0">
-													<a href="#" class="btn btn-light btn-active-light-primary me-2">Cancel Subscription</a>
-													<button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#kt_modal_upgrade_plan">Upgrade Plan</button>
+													<input type="hidden" name="subscription_id" value="{{ subscription.id }}">
+													<a href="#" class="btn btn-light btn-active-light-primary me-2"><button type="submit" class="btn btn-danger">Cancel Subscription</button></a>
+													<a class="btn btn-primary" href="{% url 'monthly' %}">Upgrade Plan</a> 
 												</div>
+											</form>
 												<!--end::Action-->
 											</div>
 											<!--end::Col-->
@@ -6906,6 +6920,7 @@ License: For each use you must have a valid license purchased only from above li
 											<!--end::Title-->
 											<!--begin::Row-->
 											<div class="row gx-9 gy-6">
+												{% for credit_card in credit_cards %}
 												<!--begin::Col-->
 												<div class="col-xl-6">
 													<!--begin::Card-->
@@ -6913,18 +6928,18 @@ License: For each use you must have a valid license purchased only from above li
 														<!--begin::Info-->
 														<div class="d-flex flex-column py-2">
 															<!--begin::Owner-->
-															<div class="d-flex align-items-center fs-4 fw-bolder mb-5">Marcus Morris
+															<div class="d-flex align-items-center fs-4 fw-bolder mb-5">{{credit_card.cardholder_name}}
 															<span class="badge badge-light-success fs-7 ms-2">Primary</span></div>
 															<!--end::Owner-->
 															<!--begin::Wrapper-->
 															<div class="d-flex align-items-center">
 																<!--begin::Icon-->
-																<img src="assets/media/svg/card-logos/visa.svg" alt="" class="me-4" />
+																<img src="assets/media/svg/card-logos/{{credit_card.card_type}}.svg" alt="" class="me-4" />
 																<!--end::Icon-->
 																<!--begin::Details-->
 																<div>
-																	<div class="fs-4 fw-bolder">Visa **** 1679</div>
-																	<div class="fs-6 fw-bold text-gray-400">Card expires at 09/24</div>
+																	<div class="fs-4 fw-bolder">{{ credit_card.card_type }} **** {{ credit_card.last_4_digits }}</div>
+																	<div class="fs-6 fw-bold text-gray-400">Card expires at {{ credit_card.expiration_date|date:"m/Y" }}</div>
 																</div>
 																<!--end::Details-->
 															</div>
@@ -6938,77 +6953,11 @@ License: For each use you must have a valid license purchased only from above li
 														</div>
 														<!--end::Actions-->
 													</div>
+												
 													<!--end::Card-->
 												</div>
-												<!--end::Col-->
-												<!--begin::Col-->
-												<div class="col-xl-6">
-													<!--begin::Card-->
-													<div class="card card-dashed h-xl-100 flex-row flex-stack flex-wrap p-6">
-														<!--begin::Info-->
-														<div class="d-flex flex-column py-2">
-															<!--begin::Owner-->
-															<div class="d-flex align-items-center fs-4 fw-bolder mb-5">Jacob Holder</div>
-															<!--end::Owner-->
-															<!--begin::Wrapper-->
-															<div class="d-flex align-items-center">
-																<!--begin::Icon-->
-																<img src="assets/media/svg/card-logos/american-express.svg" alt="" class="me-4" />
-																<!--end::Icon-->
-																<!--begin::Details-->
-																<div>
-																	<div class="fs-4 fw-bolder">Mastercard **** 2040</div>
-																	<div class="fs-6 fw-bold text-gray-400">Card expires at 10/22</div>
-																</div>
-																<!--end::Details-->
-															</div>
-															<!--end::Wrapper-->
-														</div>
-														<!--end::Info-->
-														<!--begin::Actions-->
-														<div class="d-flex align-items-center py-2">
-															<button type="reset" class="btn btn-sm btn-light btn-active-light-primary me-3">Delete</button>
-															<button class="btn btn-sm btn-light btn-active-light-primary" data-bs-toggle="modal" data-bs-target="#kt_modal_new_card">Edit</button>
-														</div>
-														<!--end::Actions-->
-													</div>
-													<!--end::Card-->
-												</div>
-												<!--end::Col-->
-												<!--begin::Col-->
-												<div class="col-xl-6">
-													<!--begin::Card-->
-													<div class="card card-dashed h-xl-100 flex-row flex-stack flex-wrap p-6">
-														<!--begin::Info-->
-														<div class="d-flex flex-column py-2">
-															<!--begin::Owner-->
-															<div class="d-flex align-items-center fs-4 fw-bolder mb-5">Jhon Larson</div>
-															<!--end::Owner-->
-															<!--begin::Wrapper-->
-															<div class="d-flex align-items-center">
-																<!--begin::Icon-->
-																<img src="assets/media/svg/card-logos/mastercard.svg" alt="" class="me-4" />
-																<!--end::Icon-->
-																<!--begin::Details-->
-																<div>
-																	<div class="fs-4 fw-bolder">Mastercard **** 1290</div>
-																	<div class="fs-6 fw-bold text-gray-400">Card expires at 03/23</div>
-																</div>
-																<!--end::Details-->
-															</div>
-															<!--end::Wrapper-->
-														</div>
-														<!--end::Info-->
-														<!--begin::Actions-->
-														<div class="d-flex align-items-center py-2">
-															<button type="reset" class="btn btn-sm btn-light btn-active-light-primary me-3">Delete</button>
-															<button class="btn btn-sm btn-light btn-active-light-primary" data-bs-toggle="modal" data-bs-target="#kt_modal_new_card">Edit</button>
-														</div>
-														<!--end::Actions-->
-													</div>
-													<!--end::Card-->
-												</div>
-												<!--end::Col-->
+												{% endfor %}
+												
 												<!--begin::Col-->
 												<div class="col-xl-6">
 													<!--begin::Notice-->
@@ -7023,7 +6972,7 @@ License: For each use you must have a valid license purchased only from above li
 															</div>
 															<!--end::Content-->
 															<!--begin::Action-->
-															<a href="#" class="btn btn-primary px-6 align-self-center text-nowrap">Add Card</a>
+															<a href="{% url 'add_credit_card' %}" class="btn btn-primary px-6 align-self-center text-nowrap">Add Card</a>
 															<!--end::Action-->
 														</div>
 														<!--end::Wrapper-->
