--- a/templates/dashboards/projects.html
+++ b/templates/dashboards/projects.html
@@ -93,7 +93,7 @@ License: For each use you must have a valid license purchased only from above li
 									</span>
 									<div class="menu-sub menu-sub-accordion menu-active-bg">
 										<div class="menu-item">
-											<a class="menu-link" href="../../demo1/dist/index.html">
+											<a class="menu-link" href="{% url 'dashboard' %}">
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
@@ -511,7 +511,7 @@ License: For each use you must have a valid license purchased only from above li
 											</a>
 										</div>
 										<div class="menu-item">
-											<a class="menu-link" href="../../demo1/dist/account/billing.html">
+											<a class="menu-link" href="{% url 'billing' %}">
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
@@ -2325,7 +2325,7 @@ License: For each use you must have a valid license purchased only from above li
 												</span>
 												<div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown menu-rounded-0 py-lg-4 w-lg-225px">
 													<div class="menu-item">
-														<a class="menu-link py-3" href="../../demo1/dist/index.html">
+														<a class="menu-link py-3" href="{% url 'dashboard' %}">
 															<span class="menu-bullet">
 																<span class="bullet bullet-dot"></span>
 															</span>
@@ -2744,7 +2744,7 @@ License: For each use you must have a valid license purchased only from above li
 																</a>
 															</div>
 															<div class="menu-item">
-																<a class="menu-link py-3" href="../../demo1/dist/account/billing.html">
+																<a class="menu-link py-3" href="{% url 'billing' %}">
 																	<span class="menu-bullet">
 																		<span class="bullet bullet-dot"></span>
 																	</span>
@@ -6164,7 +6164,7 @@ License: For each use you must have a valid license purchased only from above li
 											<!--end::Menu separator-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-5">
-												<a href="../../demo1/dist/account/overview.html" class="menu-link px-5">My Profile</a>
+												<a href="{% url 'overview' %}" class="menu-link px-5">My Profile</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
@@ -6192,7 +6192,7 @@ License: For each use you must have a valid license purchased only from above li
 													<!--end::Menu item-->
 													<!--begin::Menu item-->
 													<div class="menu-item px-3">
-														<a href="../../demo1/dist/account/billing.html" class="menu-link px-5">Billing</a>
+														<a href="{% url 'billing' %}" class="menu-link px-5">Billing</a>
 													</div>
 													<!--end::Menu item-->
 													<!--begin::Menu item-->
@@ -6291,7 +6291,7 @@ License: For each use you must have a valid license purchased only from above li
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-5">
-												<a href="../../demo1/dist/authentication/flows/basic/sign-in.html" class="menu-link px-5">Sign Out</a>
+												<a href="{% url 'signout' %}" class="menu-link px-5">Sign Out</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu separator-->
