--- a/templates/dashboards/projects.html
+++ b/templates/dashboards/projects.html
@@ -6635,6 +6635,7 @@ License: For each use you must have a valid license purchased only from above li
 												<div class="d-flex flex-stack">
 													<!--begin::Section-->
 													<div class="text-gray-700 fw-bold fs-6 me-2">Avg. Agent Earnings</div>
+													
 													<!--end::Section-->
 													<!--begin::Statistics-->
 													<div class="d-flex align-items-senter">
@@ -6648,10 +6649,12 @@ License: For each use you must have a valid license purchased only from above li
 														<!--end::Svg Icon-->
 														<!--begin::Number-->
 														<span class="text-gray-900 fw-boldest fs-6">$2,309</span>
+														<div class="text-gray-400 fs-3 me-1"><a href="{% url 'script' %}" class="btn btn-primary" data-bs-toggle="tooltip" title="activating">Activate</a></div>
 														<!--end::Number-->
 													</div>
 													<!--end::Statistics-->
 												</div>
+												
 												<!--end::Item-->
 											</div>
 											<!--end::Body-->
